<resources>
    <string name="app_name">Phase3</string>
    <string name="openCameraText">Open Camera</string>
    <string name="photoTakenDescription">Photo</string>
    <string name="title_activity_cat_report">CatReportActivity</string>
    <string name="welcome_text">Welcome to Explorexas!</string>
    <string name="view_report_text">View All Reports</string>
    <string name="create_report_text">Create A New Report</string>
    <string name="search_report_text">Search Reports</string>
    <string name="signout_button_text">Sign Out</string>
    <string name="hello_text">Hello! </string>
    <string name="submit_button_text">Submit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="report_place">Place</string>
    <string name="report_title">Title</string>
    <string name="report_category">Category</string>
    <string name="report_review">Review</string>
    <string name="report_rating">Rating</string>
    <string name="report_tag">Tag</string>
    <string name="report_image">Image</string>
    <string name="report_coordinates">Coordinates</string>
    <string name="report_submitted">The Report has been created!</string>
    <string name="website_url">http://explore-texas-web.appspot.com/</string>
    <string name="view_map_text">View Reports on Map</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="report_rating">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="report_category">
        <item>Hiking</item>
        <item>Running</item>
        <item>Boating</item>
        <item>Basketball</item>
        <item>Baseball</item>
        <item>Jogging</item>
        <item>Others</item>
        <item>Test</item>
        <item>Test2</item>
    </string-array>

</resources>

