<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="409dp"
        android:layout_height="336dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/view_report_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewCategories"
            android:text="@string/view_report_text" />

        <Button
            android:id="@+id/create_report_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createReport"
            android:text="@string/create_report_text" />

        <Button
            android:id="@+id/view_map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="viewMaps"
            android:text="@string/view_map_text" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchReports"
            android:text="@string/search_report_text" />
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signOutOnClick"
            android:text="@string/signout_button_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>