<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReportActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/submit_title"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/report_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/submit_place"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="4"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/report_place"
        app:layout_constraintEnd_toStartOf="@+id/submit_category"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_title" />

    <Spinner
        android:id="@+id/submit_category"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="28dp"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_title" />

    <EditText
        android:id="@+id/submit_review"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:minLines="2"
        android:maxLines="4"
        android:gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/report_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_place" />

    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorPrimaryBlue"
        android:textColor="@color/colorWhite"
        android:text="@string/submit_button_text"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cancel_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>